--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "test:unit": "vitest --config ./vitest.config.js"
+    "test:unit": "vitest --config ./vitest.config.js",
+    "test:coverage": "vitest run --coverage --silent"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/test-utils": "^3.8.1",
     "@testing-library/vue": "^8.0.1",
+    "@vitest/coverage-v8": "^0.33.0",
     "@vue/test-utils": "^2.4.2",
     "jsdom": "^22.1.0",
     "nuxt": "^3.8.2",
