--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "test:unit": "vitest --config ./vitest.config.js --silent",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage --silent"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
